// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkTabbablePage > should execute checkTabbablePage with basic options 1`] = `
{
  "fileName": "test-tabbable.png",
  "isAboveTolerance": false,
  "isExactSameImage": true,
  "isNewBaseline": false,
  "misMatchPercentage": 0,
}
`;

exports[`checkTabbablePage > should execute checkTabbablePage with basic options 2`] = `
[MockFunction spy] {
  "calls": [
    [
      [MockFunction spy],
      {
        "circle": {
          "backgroundColor": "red",
          "borderColor": "blue",
          "borderWidth": 2,
          "fontColor": "white",
          "fontFamily": "Arial",
          "fontSize": 10,
          "showNumber": true,
          "size": 10,
        },
        "line": {
          "color": "green",
          "width": 2,
        },
      },
    ],
    [
      [MockFunction spy],
      "wic-tabbable-canvas",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`checkTabbablePage > should execute checkTabbablePage with basic options 3`] = `
[
  {
    "browserInstance": {
      "execute": [MockFunction spy] {
        "calls": [
          [
            [MockFunction spy],
            {
              "circle": {
                "backgroundColor": "red",
                "borderColor": "blue",
                "borderWidth": 2,
                "fontColor": "white",
                "fontFamily": "Arial",
                "fontSize": 10,
                "showNumber": true,
                "size": 10,
              },
              "line": {
                "color": "green",
                "width": 2,
              },
            },
          ],
          [
            [MockFunction spy],
            "wic-tabbable-canvas",
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": Promise {},
          },
          {
            "type": "return",
            "value": Promise {},
          },
        ],
      },
      "isAndroid": false,
    },
    "checkFullPageOptions": {
      "method": {
        "disableBlinkingCursor": false,
        "disableCSSAnimation": false,
        "enableLayoutTesting": false,
        "enableLegacyScreenshotMethod": false,
        "fullPageScrollTimeout": 1500,
        "hideAfterFirstScroll": [],
        "hideElements": [],
        "hideScrollBars": true,
        "removeElements": [],
        "waitForFontsLoaded": true,
      },
      "wic": {
        "addIOSBezelCorners": false,
        "addressBarShadowPadding": 6,
        "alwaysSaveActualImage": true,
        "autoElementScroll": true,
        "autoSaveBaseline": false,
        "clearFolder": false,
        "compareOptions": {
          "blockOutSideBar": false,
          "blockOutStatusBar": false,
          "blockOutToolBar": false,
          "createJsonReportFiles": false,
          "diffPixelBoundingBoxProximity": 5,
          "ignoreAlpha": false,
          "ignoreAntialiasing": false,
          "ignoreColors": false,
          "ignoreLess": false,
          "ignoreNothing": false,
          "rawMisMatchPercentage": false,
          "returnAllCompareData": false,
          "saveAboveTolerance": 0,
          "scaleImagesToSameSize": false,
        },
        "disableBlinkingCursor": false,
        "disableCSSAnimation": false,
        "enableLayoutTesting": false,
        "enableLegacyScreenshotMethod": false,
        "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
        "fullPageScrollTimeout": 1500,
        "hideScrollBars": true,
        "isHybridApp": false,
        "savePerInstance": true,
        "tabbableOptions": {
          "circle": {
            "backgroundColor": "red",
            "borderColor": "blue",
            "borderWidth": 2,
            "fontColor": "white",
            "fontFamily": "Arial",
            "fontSize": 10,
            "showNumber": true,
            "size": 10,
          },
          "line": {
            "color": "green",
            "width": 2,
          },
        },
        "toolBarShadowPadding": 6,
        "userBasedFullPageScreenshot": false,
        "waitForFontsLoaded": true,
      },
    },
    "folders": {
      "actualFolder": "/test/actual",
      "baselineFolder": "/test/baseline",
      "diffFolder": "/test/diff",
    },
    "instanceData": {
      "appName": "TestApp",
      "browserName": "Chrome",
      "browserVersion": "118.0.0.0",
      "deviceName": "iPhone 14",
      "devicePixelRatio": 2,
      "deviceRectangles": {
        "bottomBar": {
          "height": 0,
          "width": 390,
          "x": 0,
          "y": 800,
        },
        "homeBar": {
          "height": 34,
          "width": 390,
          "x": 0,
          "y": 780,
        },
        "leftSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "rightSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "screenSize": {
          "height": 844,
          "width": 390,
        },
        "statusBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "statusBarAndAddressBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "viewport": {
          "height": 733,
          "width": 390,
          "x": 0,
          "y": 47,
        },
      },
      "initialDevicePixelRatio": 2,
      "isAndroid": false,
      "isIOS": true,
      "isMobile": true,
      "logName": "test-log",
      "name": "test-device",
      "nativeWebScreenshot": false,
      "platformName": "iOS",
      "platformVersion": "17.0",
    },
    "isNativeContext": false,
    "tag": "test-tabbable",
    "testContext": {
      "commandName": "checkScreen",
      "framework": "vitest",
      "instanceData": {
        "app": "TestApp",
        "browser": {
          "name": "Chrome",
          "version": "118.0.0.0",
        },
        "deviceName": "iPhone 14",
        "isAndroid": false,
        "isIOS": true,
        "isMobile": true,
        "platform": {
          "name": "iOS",
          "version": "17.0",
        },
      },
      "parent": "test suite",
      "tag": "test-tag",
      "title": "test title",
    },
  },
]
`;

exports[`checkTabbablePage > should handle Android device correctly 1`] = `
[
  {
    "browserInstance": {
      "execute": [MockFunction spy] {
        "calls": [
          [
            [MockFunction spy],
            {
              "circle": {
                "backgroundColor": "red",
                "borderColor": "blue",
                "borderWidth": 2,
                "fontColor": "white",
                "fontFamily": "Arial",
                "fontSize": 10,
                "showNumber": true,
                "size": 10,
              },
              "line": {
                "color": "green",
                "width": 2,
              },
            },
          ],
          [
            [MockFunction spy],
            "wic-tabbable-canvas",
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": Promise {},
          },
          {
            "type": "return",
            "value": Promise {},
          },
        ],
      },
      "isAndroid": true,
    },
    "checkFullPageOptions": {
      "method": {
        "disableBlinkingCursor": false,
        "disableCSSAnimation": false,
        "enableLayoutTesting": false,
        "enableLegacyScreenshotMethod": false,
        "fullPageScrollTimeout": 1500,
        "hideAfterFirstScroll": [],
        "hideElements": [],
        "hideScrollBars": true,
        "removeElements": [],
        "waitForFontsLoaded": true,
      },
      "wic": {
        "addIOSBezelCorners": false,
        "addressBarShadowPadding": 6,
        "alwaysSaveActualImage": true,
        "autoElementScroll": true,
        "autoSaveBaseline": false,
        "clearFolder": false,
        "compareOptions": {
          "blockOutSideBar": false,
          "blockOutStatusBar": false,
          "blockOutToolBar": false,
          "createJsonReportFiles": false,
          "diffPixelBoundingBoxProximity": 5,
          "ignoreAlpha": false,
          "ignoreAntialiasing": false,
          "ignoreColors": false,
          "ignoreLess": false,
          "ignoreNothing": false,
          "rawMisMatchPercentage": false,
          "returnAllCompareData": false,
          "saveAboveTolerance": 0,
          "scaleImagesToSameSize": false,
        },
        "disableBlinkingCursor": false,
        "disableCSSAnimation": false,
        "enableLayoutTesting": false,
        "enableLegacyScreenshotMethod": false,
        "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
        "fullPageScrollTimeout": 1500,
        "hideScrollBars": true,
        "isHybridApp": false,
        "savePerInstance": true,
        "tabbableOptions": {
          "circle": {
            "backgroundColor": "red",
            "borderColor": "blue",
            "borderWidth": 2,
            "fontColor": "white",
            "fontFamily": "Arial",
            "fontSize": 10,
            "showNumber": true,
            "size": 10,
          },
          "line": {
            "color": "green",
            "width": 2,
          },
        },
        "toolBarShadowPadding": 6,
        "userBasedFullPageScreenshot": false,
        "waitForFontsLoaded": true,
      },
    },
    "folders": {
      "actualFolder": "/test/actual",
      "baselineFolder": "/test/baseline",
      "diffFolder": "/test/diff",
    },
    "instanceData": {
      "appName": "TestApp",
      "browserName": "Chrome",
      "browserVersion": "118.0.0.0",
      "deviceName": "Pixel 4",
      "devicePixelRatio": 2,
      "deviceRectangles": {
        "bottomBar": {
          "height": 0,
          "width": 390,
          "x": 0,
          "y": 800,
        },
        "homeBar": {
          "height": 34,
          "width": 390,
          "x": 0,
          "y": 780,
        },
        "leftSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "rightSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "screenSize": {
          "height": 844,
          "width": 390,
        },
        "statusBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "statusBarAndAddressBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "viewport": {
          "height": 733,
          "width": 390,
          "x": 0,
          "y": 47,
        },
      },
      "initialDevicePixelRatio": 2,
      "isAndroid": true,
      "isIOS": false,
      "isMobile": true,
      "logName": "test-log",
      "name": "test-device",
      "nativeWebScreenshot": false,
      "platformName": "Android",
      "platformVersion": "11.0",
    },
    "isNativeContext": false,
    "tag": "test-tabbable",
    "testContext": {
      "commandName": "checkScreen",
      "framework": "vitest",
      "instanceData": {
        "app": "TestApp",
        "browser": {
          "name": "Chrome",
          "version": "118.0.0.0",
        },
        "deviceName": "Pixel 4",
        "isAndroid": true,
        "isIOS": false,
        "isMobile": true,
        "platform": {
          "name": "Android",
          "version": "11.0",
        },
      },
      "parent": "test suite",
      "tag": "test-tag",
      "title": "test title",
    },
  },
]
`;

exports[`checkTabbablePage > should handle custom tabbable options 1`] = `
[MockFunction spy] {
  "calls": [
    [
      [MockFunction spy],
      {
        "circle": {
          "backgroundColor": "yellow",
          "borderColor": "black",
          "borderWidth": 3,
          "fontColor": "black",
          "fontFamily": "Helvetica",
          "fontSize": 12,
          "showNumber": false,
          "size": 15,
        },
        "line": {
          "color": "red",
          "width": 3,
        },
      },
    ],
    [
      [MockFunction spy],
      "wic-tabbable-canvas",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`checkTabbablePage > should handle default tabbable options 1`] = `
[MockFunction spy] {
  "calls": [
    [
      [MockFunction spy],
      {
        "circle": {
          "backgroundColor": "red",
          "borderColor": "blue",
          "borderWidth": 2,
          "fontColor": "white",
          "fontFamily": "Arial",
          "fontSize": 10,
          "showNumber": true,
          "size": 10,
        },
        "line": {
          "color": "green",
          "width": 2,
        },
      },
    ],
    [
      [MockFunction spy],
      "wic-tabbable-canvas",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`checkTabbablePage > should handle hybrid app options correctly 1`] = `
[
  {
    "browserInstance": {
      "execute": [MockFunction spy] {
        "calls": [
          [
            [MockFunction spy],
            {
              "circle": {
                "backgroundColor": "red",
                "borderColor": "blue",
                "borderWidth": 2,
                "fontColor": "white",
                "fontFamily": "Arial",
                "fontSize": 10,
                "showNumber": true,
                "size": 10,
              },
              "line": {
                "color": "green",
                "width": 2,
              },
            },
          ],
          [
            [MockFunction spy],
            "wic-tabbable-canvas",
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": Promise {},
          },
          {
            "type": "return",
            "value": Promise {},
          },
        ],
      },
      "isAndroid": false,
    },
    "checkFullPageOptions": {
      "method": {
        "disableBlinkingCursor": false,
        "disableCSSAnimation": false,
        "enableLayoutTesting": false,
        "enableLegacyScreenshotMethod": false,
        "fullPageScrollTimeout": 1500,
        "hideAfterFirstScroll": [],
        "hideElements": [],
        "hideScrollBars": true,
        "removeElements": [],
        "waitForFontsLoaded": true,
      },
      "wic": {
        "addIOSBezelCorners": false,
        "addressBarShadowPadding": 6,
        "alwaysSaveActualImage": true,
        "autoElementScroll": true,
        "autoSaveBaseline": false,
        "clearFolder": false,
        "compareOptions": {
          "blockOutSideBar": false,
          "blockOutStatusBar": false,
          "blockOutToolBar": false,
          "createJsonReportFiles": false,
          "diffPixelBoundingBoxProximity": 5,
          "ignoreAlpha": false,
          "ignoreAntialiasing": false,
          "ignoreColors": false,
          "ignoreLess": false,
          "ignoreNothing": false,
          "rawMisMatchPercentage": false,
          "returnAllCompareData": false,
          "saveAboveTolerance": 0,
          "scaleImagesToSameSize": false,
        },
        "disableBlinkingCursor": false,
        "disableCSSAnimation": false,
        "enableLayoutTesting": false,
        "enableLegacyScreenshotMethod": false,
        "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
        "fullPageScrollTimeout": 1500,
        "hideScrollBars": true,
        "isHybridApp": true,
        "savePerInstance": true,
        "tabbableOptions": {
          "circle": {
            "backgroundColor": "red",
            "borderColor": "blue",
            "borderWidth": 2,
            "fontColor": "white",
            "fontFamily": "Arial",
            "fontSize": 10,
            "showNumber": true,
            "size": 10,
          },
          "line": {
            "color": "green",
            "width": 2,
          },
        },
        "toolBarShadowPadding": 6,
        "userBasedFullPageScreenshot": false,
        "waitForFontsLoaded": true,
      },
    },
    "folders": {
      "actualFolder": "/test/actual",
      "baselineFolder": "/test/baseline",
      "diffFolder": "/test/diff",
    },
    "instanceData": {
      "appName": "TestApp",
      "browserName": "Chrome",
      "browserVersion": "118.0.0.0",
      "deviceName": "iPhone 14",
      "devicePixelRatio": 2,
      "deviceRectangles": {
        "bottomBar": {
          "height": 0,
          "width": 390,
          "x": 0,
          "y": 800,
        },
        "homeBar": {
          "height": 34,
          "width": 390,
          "x": 0,
          "y": 780,
        },
        "leftSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "rightSidePadding": {
          "height": 0,
          "width": 0,
          "x": 0,
          "y": 0,
        },
        "screenSize": {
          "height": 844,
          "width": 390,
        },
        "statusBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "statusBarAndAddressBar": {
          "height": 47,
          "width": 390,
          "x": 0,
          "y": 0,
        },
        "viewport": {
          "height": 733,
          "width": 390,
          "x": 0,
          "y": 47,
        },
      },
      "initialDevicePixelRatio": 2,
      "isAndroid": false,
      "isIOS": true,
      "isMobile": true,
      "logName": "test-log",
      "name": "test-device",
      "nativeWebScreenshot": false,
      "platformName": "iOS",
      "platformVersion": "17.0",
    },
    "isNativeContext": false,
    "tag": "test-tabbable",
    "testContext": {
      "commandName": "checkScreen",
      "framework": "vitest",
      "instanceData": {
        "app": "TestApp",
        "browser": {
          "name": "Chrome",
          "version": "118.0.0.0",
        },
        "deviceName": "iPhone 14",
        "isAndroid": false,
        "isIOS": true,
        "isMobile": true,
        "platform": {
          "name": "iOS",
          "version": "17.0",
        },
      },
      "parent": "test suite",
      "tag": "test-tag",
      "title": "test title",
    },
  },
]
`;
